AnvilRecipe now uses Ingredients for inputs